# NLP

./: Generative_Text_using_LSTM_and_RNN (1).ipynb  NLP_text_classification.ipynb  audio_app.py  client_secret_999515627859-q0eb5q6cd8pie26tmivj9dctuulj18gb.apps.googleusercontent.com.json  data_extruction.ipynb  feature_extruction_paper.ipynb  imdb-nlp.ipynb  movie_rewies_RNN.ipynb  real&fake_news_classifi.ipynb  requirements.txt  sentiment_analysis.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
RAG_App_QA/: requirements.txt  webbase1_app.py
Voice Assisstance chatbot/: audio_pdf.py  requirements.txt
caption/: image.py  requirements.txt
chat_agent/: README.md  crewai_flow.html  pyproject.toml
chat_agent/src/chat_agent/: crew.py  main.py
image-generator-using-deep learning/: app.py  requirements.txt
image-generator-using-deep learning/Models/: tokenizer.pkl
image_captioning/: app.py
python sending email/: Email_app.py
streamlit app/: streamlit_app.py
